--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - uses: arduino/compile-sketches@v1
       with:
         fqbn: 'arduino:avr:zero'
