--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v3
     - uses: arduino/compile-sketches@v1
       with:
-        fqbn: 'arduino:samd:zero'
+        fqbn: 'arduino:avr:uno'
