use platformio CI

--- a/.github/workflows/githubci.yaml
+++ b/.github/workflows/githubci.yaml
@@ -1,32 +1,61 @@
-name: Arduino Library CI
+name: PlatformIO CI
 
-on: [pull_request, push, repository_dispatch]
+on: [pull_request, repository_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        example: [
+          examples/chBlink,
+          examples/chBlinkPrint,
+          examples/chContextTime,
+          examples/chCoop,
+          examples/chDataSharing,
+          examples/chEvent,
+          examples/chFifoDataLogger,
+          examples/chIsrSemaphore,
+          examples/chJitter,
+          examples/chMailbox,
+          examples/chMemPool,
+          examples/chMutex,
+          examples/chRoundRobin,
+          examples/chSemaphore
+          ]
+        board: [
+          zero,
+          uno,
+          due,
+          mega,
+          teensy30,
+          teensy31,
+          teensy35,
+          teensy36,
+          teensy40,
+          teensy41
+        ]
+
     steps:
-    - uses: actions/setup-python@v1
+    - uses: actions/checkout@v3
+    - name: Cache pip
+      uses: actions/cache@v3
       with:
-        python-version: '3.x'
-    - uses: actions/checkout@v2
-    - uses: actions/checkout@v2
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Cache PlatformIO
+      uses: actions/cache@v3
       with:
-         repository: adafruit/ci-arduino
-         path: ci
-
-    - name: pre-install
-      run: bash ci/actions_install.sh
-
-    - name: test platforms
-      run: python3 ci/build_platform.py main_platforms
-
-    # - name: clang
-    #   run: python3 ci/run-clang-format.py -e "ci/*" -e "bin/*" -r . 
-
-    - name: doxygen
+        path: ~/.platformio
+        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+    - name: Set up Python
+      uses: actions/setup-python@v3
+    - name: Install PlatformIO
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade platformio
+    - name: Run PlatformIO
+      run: pio ci --lib="." --board=${{ matrix.board }}
       env:
-        GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-        PRETTYNAME : "ChibiOS Arduino Library"
-      run: bash ci/doxy_gen_and_deploy.sh
+        PLATFORMIO_CI_SRC: ${{ matrix.example }}
