--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -44,6 +44,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade platformio
     - name: Run PlatformIO
-      run: pio ci --lib="." --board=zero --board=uno --board=due --board=mega --board=teensy30 --board=teensy31 --board=teensy35 --board=teensy36 --board=teensy40 --board=teensy41
+      run: pio ci --lib="." --board=zero --board=uno --board=due --board=teensy30 --board=teensy31 --board=teensy35 --board=teensy36 --board=teensy40 --board=teensy41
       env:
         PLATFORMIO_CI_SRC: ${{ matrix.example }}
