--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -24,7 +24,7 @@ jobs:
           # examples/chSemaphore
         ]
         board: [
-          zero, uno, due, teensy30, teensy31, teensy35, teensy36, teensy40, teensy41
+          zero, due, teensy30, teensy31, teensy35, teensy36, teensy40, teensy41
         ]
 
     steps:
