add back all boards and SD library

--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -3,7 +3,7 @@ name: PlatformIO CI
 on: [pull_request, repository_dispatch]
 
 jobs:
-  # from opensearch-project/opensearch-build: .github/workflows/manifest.yml
+  # from opensearch-project/opensearch-build: .github/workflows/manifests.yml
   list-examples:
     runs-on: ubuntu-latest
     outputs:
@@ -19,8 +19,16 @@ jobs:
     strategy:
       matrix:
         example: ${{ fromJson(needs.list-examples.outputs.matrix) }}
-        board: [
-          zero #, due, teensy30, teensy31, teensy35, teensy36, teensy40, teensy41
+        board: 
+          zero,
+          # uno, -- build fails
+          due,
+          teensy30,
+          teensy31,
+          teensy35,
+          teensy36,
+          teensy40,
+          teensy41
         ]
 
     steps:
@@ -43,6 +51,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade platformio
     - name: Run PlatformIO
-      run: pio ci --lib="." --board=${{ matrix.board }}
+      run: pio ci --lib="." --lib="SD" --board=${{ matrix.board }}
       env:
         PLATFORMIO_CI_SRC: examples/${{ matrix.example }}
