--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - id: set-matrix
-      run: echo "::set-output name=matrix::$(ls examples | jq -R -s -c 'split("\n")[:-1]')"
+      run: echo "::set-output name=matrix::$(ls examples | grep -v "chFifoDataLogger" | jq -R -s -c 'split("\n")[:-1]')"
 
   build:
     needs: list-examples
@@ -50,8 +50,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade platformio
-    - name: Install Library Dependencies
-      run: pio lib -g install SD
     - name: Run PlatformIO
       run: pio ci --lib="." --board=${{ matrix.board }}
       env:
