--- a/.github/workflows/upstream.yaml
+++ b/.github/workflows/upstream.yaml
@@ -17,11 +17,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: 'ChibiOS/ChibiOS'
-        path: 'ChibiOS'
+        path: '../'
     - uses: actions/checkout@v3
       with:
         repository: 'ARM-software/CMSIS_5'
-        path: 'CMSIS_5'
+        path: '../CMSIS_5'
     - name: Run checkout script
       run: |
         bash .github/scripts/upstream.sh
